Event create endpoint with documentation (#2)
Event create endpoint
OpenAPI parameters
OpenAPI response body
