# swagger.json
@@ -27,6 +27,89 @@
           }
         }
       }
+    },
+    "/v1/user/{UserID}/event": {
+      "post": {
+        "tags": [
+          "event"
+        ],
+        "summary": "Creates a new event.",
+        "operationId": "EventCreate",
+        "parameters": [
+          {
+            "name": "Event",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/EventObj"
+            }
+          },
+          {
+            "type": "integer",
+            "format": "int64",
+            "name": "UserID",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "201": {
+            "$ref": "#/responses/EventResponse"
+          },
+          "400": {
+            "description": "Request",
+            "$ref": "#/responses/Bad"
+          },
+          "500": {
+            "description": "Server Error",
+            "$ref": "#/responses/Internal"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "EventObj": {
+      "description": "Event description object",
+      "type": "object",
+      "required": [
+        "owner",
+        "name"
+      ],
+      "properties": {
+        "description": {
+          "description": "More detailed description of the event",
+          "type": "string",
+          "x-go-name": "Description"
+        },
+        "id": {
+          "description": "Identifier generated by the storage TODO: remove",
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "ID"
+        },
+        "name": {
+          "description": "Desired event name",
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "owner": {
+          "description": "Number of the owner of the event",
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Owner"
+        }
+      },
+      "x-go-name": "Event",
+      "x-go-package": "github.com/Maleventum/arcana/model"
+    }
+  },
+  "responses": {
+    "EventResponse": {
+      "description": "EventResponse description object response",
+      "schema": {
+        "$ref": "#/definitions/EventObj"
+      }
     }
   },
   "securityDefinitions": {
